--- a/website/vercel.json
+++ b/website/vercel.json
@@ -1,6 +1,4 @@
 {
-  "functions": {
-    "api/chat.js": { "runtime": "nodejs20.x" }
-  }
+  "version": 2,
+  "builds": [{ "src": "api/chat.js", "use": "@vercel/node" }]
 }
-
