--- a/.env.example
+++ b/.env.example
@@ -5,7 +5,9 @@
 # Ollama (gratis/local)
 OLLAMA_BASE_URL=http://localhost:11434
 OLLAMA_MODEL=llama3.1
-OLLAMA_TIMEOUT_S=20
+OLLAMA_TIMEOUT_S=60
+# Houd de model warm (scheelt op Vercel, zeker op CPU).
+OLLAMA_KEEP_ALIVE=30m
 
 # VlaamsCodex AI webserver (serveert `website/` + /api/chat)
 VLAAMSCODEX_AI_HOST=127.0.0.1
